--- a/project/export_presets.cfg
+++ b/project/export_presets.cfg
@@ -100,7 +100,7 @@ permissions/broadcast_sticky=false
 permissions/broadcast_wap_push=false
 permissions/call_phone=false
 permissions/call_privileged=false
-permissions/camera=false
+permissions/camera=true
 permissions/capture_audio_output=false
 permissions/capture_secure_video_output=false
 permissions/capture_video_output=false
